# graduate

./: CMakeLists.txt  package.xml
.kiro/specs/uuv-trajectory-tracking/: DIAGNOSIS.md  design.md  eca_a9_analysis.md  path_following_tuning_guide.md  path_following_usage.md  requirements.md  tasks.md  troubleshooting.md
include/uuv_project_core/: coverage_planner.h  ground_truth_environment.h
launch/: start_my_world.launch  start_path_following.launch
models/seafloor/: custom_seafloor.stl  model.config  model.sdf
rviz/: exploration.rviz
scripts/: check_pointcloud_3d.py  generate_seafloor.py  sonar_degradation_node.py
src/: coverage_planner.cpp  grid_map_node.cpp  ground_truth_environment.cpp  map_evaluation_node.cpp  sonar_sensor.cpp
worlds/: my_obstacles_world.world
